syntax = "proto3";

package proto.common;

message Patient {
  int64 id = 1;
  string firstName = 2;
  string lastName = 3;
  string dateOfBirth = 4;
  string gender = 5;
  string address = 6;
  string phoneNumber = 7;

  repeated Hospital registeredHospitals = 8;
}

message Hospital {
  int64 id = 1;
  string name = 2;
  string department = 3;
  repeated Patient registeredPatients = 4;
}

message Treatment {
  int64 id = 1;
  Patient patient = 2;
  string diagnosis = 3;
  string treatmentDate = 4;
  Hospital hospital = 5;
}